# remoterunlib

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  __init__.py  pyproject.toml  remoterunlib.py  setup.py
demo/: run.py  selenium_test_script.py
demo/Ansible/: inventory.ini  main.py  test_playbook.yml
demo/Ansible/tasks/: main.yml
demo/dashboard/: dashboard_example.py
demo/docker/: docker_example.py
demo/terraform/: main.py
demo/terraform/terraform/aws/: .terraform.lock.hcl  main.tf  terraform.tfstate  tfplan
demo/terraform/terraform/onprem/: main.tf  onpremplan  terraform.tfstate
remoteinfra/: __init__.py  dashboard.py  remoterunlib.py
remoteinfra/UI/: script.js
remoterunlib/: __init__.py  dashboard.py  remoterunlib.py  utils.py
remoterunlib/UI/: index.html  script.js  styles.css
