[tool.poetry]
name = "remoterunlib"
version = "0.8.1"
description = "Enterprise remote management library for SSH, Docker, Ansible, Terraform, PowerShell, and web dashboard automation."
readme = "README.md"
authors = ["Sharath Kumar <dsharathrao@gmail.com>"]
repository = "https://github.com/dsharathrao/remoterunlib"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dsharathrao/remoterunlib/issues"

[tool.poetry.dependencies]
python = ">=3.6"
paramiko = "3.4.0"
flask-socketio = "^5.5.0"
flask-cors = "^4.0.0"
ansible = {version = "^8.7.0", markers = "sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
paramiko = "3.4.0"
pre-commit = "^2.12"
towncrier = "^21.3"
pytest-cov = "^2.11"
responses = "^0.13.2"

[tool.poetry.scripts]
poetrify = "remoterunlib.cli:application.run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"